syntax = "proto3";

import "google/protobuf/timestamp.proto";

package user_create_event_message;

service UserCreateEventService {
  rpc ValidateUserEvent(UserValidateEventRequest)
      returns (UserValidateEventResponse);

  rpc CacheUserEvent(UserCacheEventRequest)
      returns (UserCacheEventResponse);
}

message UserValidateEventRequest {
  int64 uid = 1;
  string user_hash = 2;
}

message UserValidateEventResponse {
  bool validation = 1;
  string status = 2;
}

message UserCacheEventRequest{
  int64 uid = 1;
  string user_hash = 2;
  string gender = 3;
  google.protobuf.Timestamp birth_date = 4;
}

message UserCacheEventResponse {
  bool cached = 1;
  string status = 2;
  int64 uid = 3;
  string user_hash = 4;
}